[package]
name = "dupfiles"
version = "0.1.0"
authors = ["QuirinuX"]
edition = "2018"
description = "duplicate files lookup tool"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
glob = "0.3.0"
md5 = "0.7.0"
simple_logger = "1.11.0"
log = "0.4"
size_format = "1.0.2"
rayon = "1.5"
console = "0.14.0"
indicatif = {version = "*", features = ["rayon", "improved_unicode"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.4.3"
lazy_static = "1.4.0"
